[package]
name = "brute_forcer"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = {package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "dev", features = ["multicore"]}
